--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.39",
+    "@types/react": "^18.0.1",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0"
   }
